--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Forex Bar Chart</h1>
     <div id="chart-container">
-        <div id="loading">
+        <div id="loading" class="hidden">
             <div class="spinner"></div>
         </div>
         <canvas id="chart"></canvas>
